feat: Angular 跨路由傳值

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
 <p>home-page works!</p>
+<a [routerLink]="'../'+STATIC_ROUTES.TEST"> go test </a>
+
+<button type="button" (click)="changeVal()">click</button>
