--- a/src/app/pages/test-page/test-page.component.html
+++ b/src/app/pages/test-page/test-page.component.html
@@ -1,1 +1,4 @@
 <p>test-page works!</p>
+<a [routerLink]="'../'+STATIC_ROUTES.HOME"> go home </a>
+
+<button type="button" (click)="changeVal()">click</button>
