feat: tailwind css 練習

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,3 +2,9 @@
 <a [routerLink]="'../'+STATIC_ROUTES.TEST"> go test </a>
 
 <button type="button" (click)="changeVal()">click</button>
+
+<div class="bg-red-500 sm:bg-orange-500 md:bg-yellow-500 lg:bg-green-500 xl:bg-blue-500 2xl:bg-purple-500">
+  根據RDW變換背景
+</div>
+
+<p class="p-5">123</p>
