--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<p>home-page works!</p>
+<!-- <p>home-page works!</p>
 <a [routerLink]="'../'+STATIC_ROUTES.TEST"> go test </a>
 
 <button type="button" (click)="changeVal()">click</button>
@@ -7,4 +7,29 @@
   根據RDW變換背景
 </div>
 
-<p class="p-5">123</p>
+
+<button type="button" class="bg-cyan-500 text-white m-4 p-3 md:hover:bg-yellow-300">按鈕</button>
+
+<a href="#"
+  class="group block max-w-xs mx-auto rounded-lg p-6 bg-white ring-1 ring-slate-900/5 shadow-lg space-y-3 hover:bg-sky-500 hover:ring-sky-500">
+  <div class="flex items-center space-x-3">
+    <svg class="h-6 w-6 stroke-sky-500 group-hover:stroke-white" fill="none" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M11 19H6.931A1.922 1.922 0 015 17.087V8h12.069C18.135 8 19 8.857 19 9.913V11"></path>
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M14 7.64L13.042 6c-.36-.616-1.053-1-1.806-1H7.057C5.921 5 5 5.86 5 6.92V11M17 15v4M19 17h-4"></path>
+    </svg>
+    <h3 class="text-slate-900 group-hover:text-white text-sm font-semibold">New project</h3>
+  </div>
+  <p class="text-slate-500 group-hover:text-white text-sm">Create a new project from a variety of starting templates.
+  </p>
+</a>
+
+<p class="uppercase">dsdafaffsadfsa</p>
+<div class="group hover:bg-sky-500">
+  <p class="group-hover:text-white">123123</p>
+  <p class="group-hover:text-white">4342342</p>
+</div>
+ -->
+
+<p class="uppercase"> hello </p>
